# platform-info-system

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
display/: display_types.py  main.py  mqtt_connection.py
doc/diagrams/: StarUML_diagrams.mdj
doc/diagrams/workfiles/: StarUML_diagrams.mdj  service_sequenceDiagram.mdj
examples/: api_to_mqtt_adapter.py  mqtt_digitraffic.py  mqtt_test.py  simple_chart.py
src/demo/: test.py
src/pis/: aggregator.py  config.ini  demo.py  display_client.py  install.py  manager_client.py  mock_display.py
src/pis/dashboard/: announcement_manager.py  controller.py  infodisplay_manager.py  log.py  root.py
src/pis/display/: display_printer.py  display_types.py  gui_helper.py  info_view.py  mqtt_connection.py  platform_view.py  split_view.py  timetable_view.py  warningtest.py
src/pis/install/: postinstall.py  stationCodes.py  uninstall.py  wizard.py
src/pis/managementNode/: announcement_manager.py  data_manager.py  infodisplay_manager.py  manager.py  manager3.py  passing_train.py  station_names.py
src/pis/managementNode/views/: brokerstats.py  displaystats.py
src/pis/messaging/: __init__.py  ratatraffic.py  telemetry.py
src/pis/utils/: Event.py  Singleton.py  Tree.py  conf.py  integrity.py  tkui.py
src/pis/utils/database/: sqlite.py
src/pis/utils/database/model/: display.py
