[metadata]
name = platform-info-system
version = 2023.1.000
author = Samuel Laisaar, Leevi Laaksonen, Alexander Liski, Leo Lehtiö
author_email = <name>.<surname>@metropolia.fi
description = A virtual railway station information display system
long_description = file: README.md
url = https://github.com/InnovationProject4/platform-info-system/tree/main/




packages = find:
install_requires =
    certifi==2022.12.7
    charset-normalizer==3.1.0
    idna==3.4
    paho-mqtt==1.6.1
    pytz==2022.7.1
    requests==2.28.2
    tabulate==0.9.0
    urllib3==1.26.14
    pyopenssl==23.1.1

setup_requires =
    setuptools_scm
    wheel

    
[options.entry_points]
console_scripts =
    pisdisplay = build:display_client
    pisserver = build.aggregator:main
    pids = platform-info-system.build:wizard
    test = platform-info-system.wizard:main
    


